--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,41 +4,19 @@ environment:
   node_pre_gyp_secretAccessKey:
     secure: 1amwJJw9fu0j6dXnc5KsAQbSYf7Cjw/dapT6OZWABa6nc52grkKeLQ+DGaOfQz8i
   matrix:
-    # custom visual studio 2015 builds
-    - nodejs_version: 0.10.40
-      platform: x64
+    - nodejs_version: 4
       msvs_toolset: 14
-      TOOLSET_ARGS: --dist-url=https://s3.amazonaws.com/mapbox/node-cpp11
-    - nodejs_version: 0.10.40
-      platform: x86
+    - nodejs_version: 6
       msvs_toolset: 14
-      TOOLSET_ARGS: --dist-url=https://s3.amazonaws.com/mapbox/node-cpp11
-    - nodejs_version: 4.4.1
-      platform: x86
-      msvs_toolset: 14
-      TOOLSET_ARGS: --dist-url=https://s3.amazonaws.com/mapbox/node-cpp11
-    - nodejs_version: 4.4.1
-      platform: x64
-      msvs_toolset: 14
-      TOOLSET_ARGS: --dist-url=https://s3.amazonaws.com/mapbox/node-cpp11
-    - nodejs_version: 5.9.1
-      platform: x86
-      msvs_toolset: 14
-      TOOLSET_ARGS: --dist-url=https://s3.amazonaws.com/mapbox/node-cpp11
-    - nodejs_version: 5.9.1
-      platform: x64
-      msvs_toolset: 14
-      TOOLSET_ARGS: --dist-url=https://s3.amazonaws.com/mapbox/node-cpp11
+
+platform: x64
 
 os: Visual Studio 2015
-
-# Disabled since we're seeing this hang frequently
-#cache:
-#  - mapnik-sdk -> appveyor.yml
 
 clone_depth: 20
 
 install:
+  - ps: Install-Product node %nodejs_version%
   - git submodule update --init
   - scripts\build-appveyor.bat
 
