--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,8 @@ environment:
   matrix:
     - nodejs_version: 4
       msvs_toolset: 14
-    - nodejs_version: 6
+    # Fixed at version until https://github.com/nodejs/node/issues/12244 is resolved by nodejs
+    - nodejs_version: 6.10.1
       msvs_toolset: 14
 
 platform: x64
