--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,8 @@ environment:
   node_pre_gyp_secretAccessKey:
     secure: 1amwJJw9fu0j6dXnc5KsAQbSYf7Cjw/dapT6OZWABa6nc52grkKeLQ+DGaOfQz8i
   matrix:
-    - nodejs_version: 4
+    # Fixed at version until https://github.com/nodejs/node/issues/12244 is resolved by nodejs
+    - nodejs_version: 4.8.1
       msvs_toolset: 14
     # Fixed at version until https://github.com/nodejs/node/issues/12244 is resolved by nodejs
     - nodejs_version: 6.10.1
